feat: Implement theming and add new tilesets
Introduces a new theme object to the `Tileset` type, allowing for more granular control over the application's appearance. This enables dynamic theming based on the selected tileset, enhancing the visual experience.

Adds two new tilesets: 'Nature' and 'Celestial', expanding the game's content and variety. Updates `index.html` to include styles for dynamic background and text colors. Refactors components to use CSS variables for theme-related colors, ensuring consistency.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,15 @@
     --font-sans: 'Funnel Display Variable', ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   }
 </style>
+<style>
+  body {
+    background-color: var(--background, #030712);
+    color: var(--text-color, #f9fafb);
+    transition: background-color 0.5s, color 0.5s;
+  }
+</style>
 </head>
-  <body class="bg-[#94d8f0] text-[#0f4c81]">
+  <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
