--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 </style>
 <style>
   body {
-    background-color: var(--background, #030712);
-    color: var(--text-color, #f9fafb);
+    background-color: var(--background, #09090b);
+    color: var(--text-color, #f4f4f5);
     transition: background-color 0.5s, color 0.5s;
   }
 </style>
