--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matchfield - Tile matching game.</title>
+    
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Matchfield - Tile matching game." />
+    <meta property="og:description" content="A beautiful puzzle game of matching patterns in chains. Find your flow and clear the board." />
+    <meta property="og:image" content="/og.png" />
+    <meta property="og:type" content="website" />
+
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
   <script type="importmap">
