feat(og): Add an og:url

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Matchfield - Tile matching game.</title>
     
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Matchfield - Tile matching game." />
-    <meta property="og:description" content="A beautiful puzzle game of matching patterns in chains. Find your flow and clear the board." />
+    <meta property="og:title" content="Matchfield" />
+    <meta property="og:description" content="A beautiful tile matching game" />
+    <meta property="og:url" content="https://matchfield.vercel.app" />
     <meta property="og:image" content="/og.png" />
     <meta property="og:type" content="website" />
 
