fix(og): Absolute og:image url
Fixes og image display on WhatsApp

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Matchfield" />
     <meta property="og:description" content="A beautiful tile matching game" />
     <meta property="og:url" content="https://matchfield.vercel.app" />
-    <meta property="og:image" content="/og.png" />
+    <meta property="og:image" content="https://matchfield.vercel.app/og.png" />
     <meta property="og:type" content="website" />
 
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
