feat: Add a meta description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matchfield - Tile matching game.</title>
+    <meta name="description" content="Play Matchfield, a beautiful tile matching game. Match patterns on tiles to clear the board and challenge yourself!" />
 
     <style>
       body {
